# ArvinOS

./: .gitignore  Cargo.toml  Makefile.toml  build.rs  linker.ld  rust-toolchain.toml  x86-unknown-none.json
.cargo/: config.toml
.github/workflows/: rust-workflow.yml
config/: x86_64-unknown-none.json
intrinsics/: Cargo.toml
intrinsics/src/: lib.rs
intrinsics/src/output/: ega.rs  mod.rs
isodir/boot/: libintrinsics.rlib  libmultiboot.rlib  os
isodir/boot/grub/: grub.cfg
kernel/src/: main.rs
multiboot/: Cargo.toml
multiboot/src/: lib.rs
src/: intrinsics.rs  main.rs  multiboot.rs  multiboot_header.rs
src/output/: mod.rs  tty.rs  vga.rs
src/output/tty/: mod.rs  vga.rs
