[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
# debug = false
# strip = true
# incremental = false

[target.x]

[dependencies]
bitflags = "1.3.2"
spin = "0.9.4"
voladdress = "1.0.2"
